[package]
name = "tokenizers-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true
